[Add]注文情報確認画面までのコントローラーとビュー

--- a/app/assets/stylesheets/admin/items.scss
+++ b/app/assets/stylesheets/admin/items.scss
@@ -2,9 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .item-add{
-  font-size:25px;
+ font-size:25px;
+ border-radius:50%;
+ background-color:white;
+ width:45px;
+ height:45px;
+ border:0;
+ box-shadow:2px 2px lightgrey;
 }
-
 
 
 thead{
