--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,2 +1,74 @@
-<h1>Orders#confirm</h1>
-<p>Find me in app/views/orders/confirm.html.erb</p>
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-3 offset-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文情報確認</h5>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <%= form_wih model: @order, local: true do |f| %>
+  <div class="row">
+    <table class="cart_item table col-8">
+      <thead>
+        <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @cart_items.each do |t| %>
+        <tr>
+          <td><%= attachment_image_tag t.item_id, :image,  size:"50x50", format:'jpeg' %> <%= t.item.name %></td>
+          <td><%= t.item.with_tax_price %></td>
+          <td><%= t.amount %></td>
+          <td><%= t.subtotal %></td>
+          <% @cart_item_total += t.subtotal %>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <table class="table col-4">
+      <tr>
+        <th>送料</th>
+        <td>800</td>
+      </tr>
+      <tr>
+        <th>商品合計</th>
+        <td><%= @cart_item_total %></td>
+      </tr>
+      <tr>
+        <th>請求金額</th>
+        <td><%= @cart_item_total + 800 %></td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="payment_method row">
+    <div class="col-1">
+      <h5><strong>支払方法</strong></h5>
+    </div>
+    <div class="col-11">
+      <p><%= @order.payment_methods_18n %></p>
+      <%= f.hiddeen_field :payment_method, value: @order.payment_method %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <h5><strong>お届け先</strong></h5>
+    </div>
+    <div class="col-11">
+      <p>〒<%= @order.postal_code %> <%= @order.address %><br>
+      <%= @order.name %></p>
+      <%= f.hidden_field :postal_code, value: @order.postal_code %>
+      <%= f.hidden_field :address, value: @order.address %>
+      <%= f.hidden_field :name, value: @order.name %>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <%= f.submit "注文を確定する", class: "btn btn-success px-3 py-2" %>
+  </div>
+  <% end %>
+</div>
