--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -24,7 +24,7 @@
             <td><%= t.id %></td>
             <td>
               <%= link_to admin_customer_path(t) do %>
-                <%= t.last_name %><%= t.first_name %>
+                <%= t.full_name %>
               <% end %>
             </td>
             <td><%= t.email %></td>
