--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
     <div class="col-4 offset-md-1">
-      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;"><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h5>
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;"><%= @customer.full_name %>さんの会員詳細</h5>
     </div>
   </div>
 
