--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container m-0 p-0">
   <div class="row mb-5 align-items-center">
-    <div class="col-3 offsetmd-2">
+    <div class="col-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">商品新規登録</h5>
     </div>
   </div>
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-2 offset-md-3">
+      <div class="col-2 offset-3">
         <p>商品名</p>
       </div>
       <div class="col-4">
