[Add]バリデーション設定、全レイアウト作成(調整未)

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -50,7 +50,7 @@
       <div class="col-1">
         <h5 class="mr-2"><strong>注文履歴</strong></h5>
       </div>
-      <%= link_to "一覧を見る", orders_oath,  class:"btn btn-primary px-4 py-2" %>
+      <%= link_to "一覧を見る", orders_path,  class:"btn btn-primary px-4 py-2" %>
     </div>
   </div>
 </div>
