--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-3 offset-md-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文履歴一覧</h5>
+    </div>
+  </div>
+</div>
+
+<table class="order-index table w-100 border">
+  <thead>
+    <tr>
+      <th>注文日</th>
+      <th>配送先</th>
+      <th>注文商品</th>
+      <th>支払金額</th>
+      <th>ステータス</th>
+      <th>注文詳細</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |t| %>
+    <tr>
+      <td><%= l t.create_at %></td>
+      <td>〒<%= t.postal_code %><br>
+      <%= t.address %><br>
+      <%= t.name %>
+      </td>
+      <td>
+      <% t.order_details.each do |f| %>
+        <%= f.item.name %><br>
+      <% end %>
+      </td>
+      <td><%= t.total_payment %>円</td>
+      <td><%= t.order_status_i18n %></td>
+      <td><%= link_to "注文する", order_path(t), class: "btn btn-primary px-2 py-2" %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
