--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container m-0 p-0">
   <div class="row mb-4 align-items-center">
-    <div class="col-3 offset-2">
+    <div class="col-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文情報入力</h5>
     </div>
   </div>
