--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,76 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<div class="container m-0 p-0">
+  <div class="row mb-4 align-items-center">
+    <div class="col-3 offset-md-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文履歴詳細</h5>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="order-deta col-6">
+      <p>注文情報</p>
+      <table class="table w-100">
+        <tr>
+          <th>注文日</th>
+          <td><%= l @order.create_at %></td>
+        </tr>
+        <tr>
+          <th>配送先</th>
+          <td>〒<%= @order.postal_code %><br>
+          <%= @order.address %><br>
+          <%= @order.name %>
+          </td>
+        </tr>
+        <tr>
+          <th>支払方法</th>
+        <td><%= @order.total_payment_i18n %></td>
+        </tr>
+        <tr>
+          <th>ステータス</th>
+          <td><%= @order.order_status_i18n %></td>
+        </tr>
+      </table>
+    </div>
+    <div class="payment-deta col-4">
+      <p>請求情報</p>
+      <table class="table w-100">
+        <tr>
+          <th>商品合計</th>
+          <td><%= @order.total_payment - @order.shipping_cost %></td>
+        </tr>
+        <tr>
+          <th>配送料</th>
+          <td><%= @order.shipping_cost %></td>
+        </tr>
+        <tr>
+          <th>ご請求額</th>
+          <td><%= @order.total_payment %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="order-content col-8">
+      <p>注文内容</p>
+      <table class="table w-100">
+        <thead>
+          <tr>
+            <th>商品</th>
+            <th>単価（税込）</th>
+            <th>個数</th>
+            <th>小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order.order_details.each do |t| %>
+          <tr>
+            <td><%= t.item.name %></td>
+            <td><%= t.price %></td>
+            <td><%= t.amount %></td>
+            <td><%= t.item.with_tax_price %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
