--- a/app/views/orders/thanks.html.erb
+++ b/app/views/orders/thanks.html.erb
@@ -1,2 +1,3 @@
-<h1>Orders#thanks</h1>
-<p>Find me in app/views/orders/thanks.html.erb</p>
+<div class="thank">
+  <h4 class="thank-text">ご注文ありがとうございました！</h4>
+</div>
