--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,11 +1,10 @@
 <div class="about text-center">
   <h1 class="mb-4">About</h1>
-  <h4>ながのCAKEは全国送信可能なケーキ屋さんです<br>
-  お子様からお年寄りの方まで召し上がりいただけるよう、<br>
-  様々なバリエーションをご用意しております。<br>
-  また、全国発送可能なので「いつ」でも「どこ」でも注文いただけます。<br>
-  ぜひ注文ください。
-  </h4>
-  <div class="shop-deta">
-  </div>
+  <h3>ながのCAKEは全国送信可能なケーキ屋さんです<br>
+    お子様からお年寄りの方まで召し上がりいただけるよう、<br>
+    様々なバリエーションをご用意しております。<br>
+    また、全国発送可能なので「いつ」でも「どこ」でも注文いただけます。<br>
+    ぜひ注文ください。
+  </h3>
+  <%= image_tag("98259D12-E622-4089-A500-9A65A3B6BE40.jpeg",class: "about-img") %>
 </div>
