--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.customer-deta table tr {
+  border:2px solid black;
+}
+
+.customer-deta table tr th {
+  background-color:whitesmoke;
+}
+
+.my-page-text {
+  display:flex;
+  align-items:center;
+}
