--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,10 +2,27 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .about-img{
-    width:200px;
-    height:150px;
+    width:620px;
+    height:350px;
 }
 
-thead{
-    height:30px;
+
+.home-image{
+    width:600px;
+    height:300px;
+    background-image:url(98259D12-E622-4089-A500-9A65A3B6BE40.jpeg);
+    background-size:cover;
+    background-position:center;
+}
+
+.top-text{
+    background-color:white;
+    border:1px solid black;
+}
+
+.top-item-image{
+    margin-right:15px;
+}
+.top-item-image:last-child{
+    margin-right:0;
 }
