--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com
+.index-item-image{
+    margin-right:15px;
+    margin-bottom:30px;
+}
+
+.index-item-image:nth-child(n+5){
+  margin-bottom:0;
+}
+
+.item-amount-select{
+  width:150px;
+  height:30px;
+}
