--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -5,12 +5,12 @@
     </div>
   </div>
 
-  <div class="my-page">
+  <div class="my-page ml-5">
     <div class=" row mb-2">
-      <div class="col-1">
-        <h5 class="mr-2"><strong>登録情報</strong></h5>
+      <div class="my-page-text col-2">
+        <h5><strong>登録情報</strong></h5>
       </div>
-        <%= link_to "編集する", edit_customer_path(@customer), class:"btn btn-success px-4 py-2" %>
+        <%= link_to "編集する", edit_customers_path, class:"btn btn-success px-4 py-2" %>
     </div>
     <div class="customer-deta row">
       <table class="table col-7 mb-3">
@@ -41,13 +41,13 @@
       </table>
     </div>
     <div class="row mb-2">
-      <div class="col-1">
+      <div class="my-page-text col-2">
         <h5 class="mr-2"><strong>配送先</strong></h5>
       </div>
       <%= link_to "一覧を見る", addresses_path, class:"btn btn-primary px-4 py-2" %>
     </div>
     <div class="row mb-2">
-      <div class="col-1">
+      <div class="my-page-text col-2">
         <h5 class="mr-2"><strong>注文履歴</strong></h5>
       </div>
       <%= link_to "一覧を見る", orders_path,  class:"btn btn-primary px-4 py-2" %>
