--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="container m-0 p-0">
   <div class="row mb-4 align-items-center">
-    <div class="col-3 offset-2">
+    <div class="col-2 offset-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">新規会員登録</h5>
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container mb-4">
   <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer',local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -25,7 +25,7 @@
         <%= f.label "(名)", class:"mb-0" %>
       </div>
       <div class="col-3  px-0">
-        <%= f.text_field :fist_name, autofocus: true, autocomplete: "fist_name", placeholder: "道子", class:"w-100"; %>
+        <%= f.text_field :first_name, autofocus: true, autocomplete: "fist_name", placeholder: "道子", class:"w-100"; %>
       </div>
     </div>
   </div>
@@ -45,7 +45,7 @@
         <%= f.label "(メイ)", class:"mb-0" %>
       </div>
       <div class="col-3  px-0">
-        <%= f.text_field :fist_name_kana, autofocus: true, autocomplete: "fist_name_kana", placeholder: "ミチコ", class:"w-100"; %>
+        <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "fist_name_kana", placeholder: "ミチコ", class:"w-100"; %>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
         <%= f.label "電話番号(ハイフンなし)", class:"mb-0" %>
       </div>
       <div class="col-3 offset-1 px-0">
-        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: "000000000", class:"w-100"; %>
+        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: "0000000000", class:"w-100"; %>
       </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
 
   <div class="actions">
     <div class="row">
-      <%= f.submit "新規登録", class: "btn btn-success col-3 offset-4" %>
+      <%= f.submit "新規登録", class: "btn btn-success col-2 offset-4" %>
     </div>
   </div>
   <% end %>
@@ -126,12 +126,12 @@
 
 <div class="container m-0 p-0">
   <div class="row mb-4 align-items-center">
-    <div class="col-4 offset-1">
+    <div class="col-2 offset-2">
       <h5 class="text-center m-0" style="background-color:whitesmoke;">既に登録済みの方</h5>
     </div>
   </div>
   <div class="row">
-    <div class="offset-2">
+    <div class="offset-3">
       <p><%= link_to "こちら", new_customer_session_path %>　からログインしてください。</p>
     </div>
   </div>
